--- a/index.html
+++ b/index.html
@@ -116,11 +116,21 @@
    
    
     <!--MUSIC SECTION -->
+
     <div id="products-section" >
          <div class="container" >
             <div class="row main-top-margin text-center" data-scrollreveal="enter top and move 100px, wait 0.3s">
                 <div class="col-md-8 col-md-offset-2 ">
                     <h1>MUSIC</h1>
+                </div>
+            </div>
+            <div class="row main-low-margin bottam-pad" >
+
+                 <div class="col-md-10  col-md-offset-1 ">
+                    <div class="col-md-8 " data-scrollreveal="enter left and move 100px, wait 0.4s">
+                    <h4 >  <strong class="color-red">New track comming soon!</strong></h4>
+                        <iframe width="854" height="480" src="https://www.youtube.com/embed/k37rVR7tE9k" frameborder="0" allowfullscreen></iframe>   
+                </div>
                 </div>
             </div>
              <!-- ./ Main Heading-->
@@ -300,6 +310,16 @@
             </div>
              <!-- ./ Main Heading-->
              <hr />
+             <div class="row main-low-margin bottam-pad" >
+
+                 <div class="col-md-10  col-md-offset-1 ">
+                <div class="col-md-8 " data-scrollreveal="enter left and move 100px, wait 0.4s">
+                    <h4 ><strong class="color-red">New live video from the last rehearsal 2016</strong></h4>
+                        <iframe width="854" height="480" src="https://www.youtube.com/embed/nA06lm_7dFk" frameborder="0" allowfullscreen></iframe>
+                </div>
+                
+                     </div>
+            </div>
             <div class="row main-low-margin" >
                 <div class="col-md-10  col-md-offset-1 ">
  <div class="col-md-4 col-sm-4" data-scrollreveal="enter left and move 100px, wait 0.8s">
