--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <p>
                             Lviv, Ukraine.<br />                          
                         Call: +38 (093) 932 24 00<br />
-                        Email: beyondthisplaceprof@gmail.com<br />
+                        Email: dimfit@gmail.com<br />
                             </p>
                        
                     </div>
@@ -373,38 +373,38 @@
                         <h3>Send us a message</h3>
                         <h4>If you would like to contact us, please provide your personal details and details of your request.</h4>
                         <hr />
-                        <form>
+                        <form id="form">
                             <div class="row">
                                 <div class="col-md-6 ">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" required="required" placeholder="Name">
+                                        <input type="text" class="form-control" required="required" placeholder="Name" id="name">
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" required="required" placeholder="Email address">
+                                        <input type="text" class="form-control" required="required" placeholder="Email address" id="email">
                                     </div>
                                 </div>
                             </div>
                               <div class="row">
                                 <div class="col-md-6 ">
                                     <div class="form-group">
-                                        <input type="text" class="form-control" required="required" placeholder="Subject">
+                                        <input type="text" class="form-control" required="required" placeholder="Subject" id="subject">
                                     </div>
                                 </div>
                                 <div class="col-md-6 ">
                                     <div class="form-group">
-                                        <input type="text" class="form-control"  placeholder="Ref. (IF any)">
+                                        <input type="text" class="form-control"  placeholder="Ref. (IF any)" id="ref">
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-md-12 ">
                                     <div class="form-group">
-                                        <textarea name="message" id="message" required="required" class="form-control" rows="3"  placeholder="Message"></textarea>
+                                        <textarea name="message" id="message" required="required" class="form-control" rows="3"  placeholder="Message" id="message"></textarea>
                                     </div>
                                     <div class="form-group">
-                                        <button type="submit" class="btn btn-primary">Submit Request</button>
+                                        <button type="submit" class="btn btn-primary" id="send">Submit Request</button>
                                     </div>
                                 </div>
                             </div>
