--- a/index.html
+++ b/index.html
@@ -438,5 +438,7 @@
     <script src="assets/js/scrollReveal.js"></script>
        <!-- CUSTOM SCRIPT-->
     <script src="assets/js/custom.js"></script>
+    <script   src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
+    <script type="text/javascript" src="script/script.js"></script>
 </body>
 </html>
