--- a/index.html
+++ b/index.html
@@ -439,6 +439,6 @@
        <!-- CUSTOM SCRIPT-->
     <script src="assets/js/custom.js"></script>
     <script   src="https://code.jquery.com/jquery-3.0.0.min.js"   integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0="   crossorigin="anonymous"></script>
-    <script type="text/javascript" src="js/contact.js"></script>
+    <script type="text/javascript" src="assets/js/contact.js"></script>
 </body>
 </html>
