--- a/index.html
+++ b/index.html
@@ -478,9 +478,7 @@
         <div class="container">
             <div class="row ">
                 &copy; 2016 Beyond This Place  | All Right Reserved 				
-		
             </div>
-            
         </div>
        
     </div> 
@@ -494,6 +492,7 @@
     <script src="assets/js/scrollReveal.js"></script>
        <!-- CUSTOM SCRIPT-->
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/contact.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script>
 	$('.carousel').carousel({
